tests/fixtures/invalid/e003/b.spec
use a

invariant cycle_b "Cycle B" {
  guarantee """something"""
}
